# awesome-uvx

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  gemini.txt  pyproject.toml  tools.json
.github/: pull_request_template.md
.github/PULL_REQUEST_TEMPLATE/: add-tool.md  repo-maintenance.md  update-tool.md
.github/scripts/: checks.py  readme.py  test-clients.py
.github/scripts/placeholders/: Data Processing.json  Database Tools.json  Development Tools.json  Documentation.json  Security & Penetration Testing.json  System & Infrastructure.json  Testing & Quality.json  Utilities.json  Web Frameworks & Tools.json
.github/scripts/template/: README.md.jinja2
.github/workflows/: ci.yml  main.yml  static.yml  sync_releases.yml  test_pkgs.yml  validate_tool.yml
scripts/: check_and_comment.ts  checks.py  diff_tools.py  latest_release.py  readme.py  search_cli.py  test-clients.py  test_clients.py
template/: README.md.j2  README.md.jinja2
