[project]
name = "awesome-uvx"
version = "0.1.0"
requires-python = ">=3.10"
description = "Awesome Python CLI tools"
dependencies = [
    "ansible",
    "celery",
    "check-jsonschema",
    "cookiecutter",
    "copier",
    "coverage",
    "csvkit",
    "django",
    "doitlive",
    "easyocr",
    "fake2db",
    "faker",
    "fastapi",
    "flask",
    "fsociety",
    "howdoi",
    "html2text",
    "httpie",
    "ipython",
    "iredis",
    "jupyter-core",
    "litecli",
    "mamba",
    "marimo",
    "markdown",
    "mycli",
    "nox",
    "pdoc",
    "peewee",
    "pgcli",
    "pipx",
    "plan",
    "poetry",
    "prefect",
    "py2app",
    "pyarmor",
    "pygments",
    "pyinstaller",
    "pyright",
    "pytest",
    "qrcode",
    "rq",
    "ruff",
    "scapy",
    "schemathesis",
    "scrapy",
    "shiv",
    "shortuuid",
    "sqlmap",
    "sqlparse",
    "textract",
    "tox",
    "typer",
    "unp",
    "uvicorn",
    "websockets",
    "xonsh",
    "youtube-dl",
]
readme = "README.md"